--- a/src/UnionStruct.Sample/UnionStruct.Sample.csproj
+++ b/src/UnionStruct.Sample/UnionStruct.Sample.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UnionStruct.Attributes\UnionStruct.Attributes.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true"/>
     <ProjectReference Include="..\UnionStruct\UnionStruct.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
   </ItemGroup>
 
