Attempt to fix missing attributes reference

--- a/src/UnionStruct.Attributes/UnionStruct.Attributes.csproj
+++ b/src/UnionStruct.Attributes/UnionStruct.Attributes.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>UnionStruct</RootNamespace>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 </Project>
