--- a/src/UnionStruct/UnionStruct.csproj
+++ b/src/UnionStruct/UnionStruct.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Label="Package configuration">
     <PackageId>NoahStolk.UnionStruct</PackageId>
-    <Version>0.0.0-alpha.3</Version>
+    <Version>0.0.0-alpha.4</Version>
     <Authors>Noah Stolk</Authors>
     <Copyright>Copyright © Noah Stolk</Copyright>
     <RepositoryType>git</RepositoryType>
@@ -38,6 +38,12 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\UnionStruct.Attributes\UnionStruct.Attributes.csproj">
+      <PrivateAssets>all</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
