--- a/src/nuget.integration-tests.config
+++ b/src/nuget.integration-tests.config
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-  <packageSources>
-    <clear />
-    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
-    <add key="local-packages" value="./artifacts" />
-  </packageSources>
+	<packageSources>
+		<clear />
+		<add key="nuget" value="https://api.nuget.org/v3/index.json" />
+		<add key="local-packages" value="./artifacts" />
+	</packageSources>
+	<packageSourceMapping>
+		<packageSource key="nuget">
+			<package pattern="*" />
+		</packageSource>
+		<packageSource key="local-packages">
+			<package pattern="NoahStolk.*" />
+		</packageSource>
+	</packageSourceMapping>
 </configuration>
