--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,7 +17,9 @@ jobs:
     - name: Build
       run: dotnet build src/UnionStruct.sln -c Release
     - name: Test
-      run: dotnet test src/UnionStruct.sln -c Release --no-build
+      run: |
+        dotnet test src/UnionStruct.sln -c Release --no-build
+        src/test-nuget.bat
     - name: Pack
       run: |
         cd src/
