Run NuGet integration tests in CI

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,5 +18,9 @@ jobs:
       run: dotnet build src/UnionStruct.sln -c Release
     - name: Test
       run: |
-        dotnet test src/UnionStruct.sln -c Release --no-build
-        src/test-nuget.bat
+        cd src/
+        dotnet test UnionStruct.sln -c Release --no-build
+        dotnet pack -c Release -o ./artifacts -p:Version=0.0.0-temp
+        dotnet restore UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj --packages ./packages --configfile "nuget.integration-tests.config"
+        dotnet build UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj -c Release --packages ./packages --no-restore
+        dotnet test UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj -c Release --no-build --no-restore
