Create separate package project

--- a/src/UnionStruct.Attributes/UnionStruct.Attributes.csproj
+++ b/src/UnionStruct.Attributes/UnionStruct.Attributes.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>UnionStruct</RootNamespace>
     <IsPackable>false</IsPackable>
+    <IncludeBuildOutput>true</IncludeBuildOutput>
   </PropertyGroup>
 
 </Project>
