--- a/src/UnionStruct.Package/UnionStruct.Package.csproj
+++ b/src/UnionStruct.Package/UnionStruct.Package.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <None Include="..\..\README.md" Pack="true" PackagePath="" Visible="false"/>
-    <None Include="$(OutputPath)\..\..\UnionStruct\release\UnionStruct.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+    <None Include="..\..\src\artifacts\bin\UnionStruct\release\UnionStruct.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
   </ItemGroup>
 
 </Project>
