--- a/src/UnionStruct.Package/UnionStruct.Package.csproj
+++ b/src/UnionStruct.Package/UnionStruct.Package.csproj
@@ -26,4 +26,8 @@
     <None Include="..\..\src\artifacts\bin\UnionStruct\release\UnionStruct.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UnionStruct\UnionStruct.csproj" PrivateAssets="all"/>
+  </ItemGroup>
+
 </Project>
