Move marker attributes to separate DLL

--- a/src/UnionStruct.Tests.Integration/UnionStruct.Tests.Integration.csproj
+++ b/src/UnionStruct.Tests.Integration/UnionStruct.Tests.Integration.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UnionStruct.Attributes\UnionStruct.Attributes.csproj"/>
     <ProjectReference Include="..\UnionStruct\UnionStruct.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
   </ItemGroup>
 
