Set DevelopmentDependency to true

--- a/src/UnionStruct.Package/UnionStruct.Package.csproj
+++ b/src/UnionStruct.Package/UnionStruct.Package.csproj
@@ -19,6 +19,7 @@
     <IsPackable>true</IsPackable>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <DevelopmentDependency>true</DevelopmentDependency>
   </PropertyGroup>
 
   <ItemGroup>
