--- a/src/UnionStruct.Package/UnionStruct.Package.csproj
+++ b/src/UnionStruct.Package/UnionStruct.Package.csproj
@@ -24,9 +24,9 @@
 
   <ItemGroup>
     <None Include="..\..\README.md" Pack="true" PackagePath="" Visible="false"/>
-    <None Include="..\..\src\artifacts\bin\UnionStruct\release\UnionStruct.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
-    <None Include="..\..\src\artifacts\bin\UnionStruct.Attributes\release\UnionStruct.Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
-    <None Include="..\..\src\artifacts\bin\UnionStruct.Attributes\release\UnionStruct.Attributes.dll" Pack="true" PackagePath="lib/netstandard2.0" Visible="false"/>
+    <None Include="$(OutputPath)\UnionStruct.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+    <None Include="$(OutputPath)\UnionStruct.Attributes.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false"/>
+    <None Include="$(OutputPath)\UnionStruct.Attributes.dll" Pack="true" PackagePath="lib/netstandard2.0" Visible="false"/>
   </ItemGroup>
 
   <ItemGroup>
