--- a/src/UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj
+++ b/src/UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj
@@ -17,7 +17,8 @@
   
   <ItemGroup>
     <PackageReference Include="NoahStolk.UnionStruct" Version="0.0.0-temp">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <!-- Make sure to include "compile" assets as we need the DLL inside the "lib" folder. -->
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive; compile</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
