--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,11 +15,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Build
-      run: dotnet build src/UnionStruct.sln -c Release
+      run: dotnet build src/UnionStruct.slnx -c Release
     - name: Test
       run: |
         cd src/
-        dotnet test UnionStruct.sln -c Release --no-build
+        dotnet test UnionStruct.slnx -c Release --no-build
         dotnet pack -c Release -o ./artifacts -p:Version=0.0.0-temp
         dotnet restore UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj --packages ./packages --configfile "nuget.integration-tests.config"
         dotnet build UnionStruct.Tests.NuGetIntegration/UnionStruct.Tests.NuGetIntegration.csproj -c Release --packages ./packages --no-restore
